# paas-smart-contracts

./: .gitignore  README.md  plutus-paas.cabal
app/: plutus-paas.hs
shell-scripts/: addressBalance.sh  balanceMainnet.sh  burn-token-testnet.sh  generatePlutusAddress.sh  generatePlutusAddressMainnet.sh  getFromScriptV2.sh  getFromScriptV2AutoSelectUtxo.sh  getFromScriptV2AutoSelectUtxoMainnet.sh  lockAdaToScript.sh  mint-token-testnet.sh  payToScriptV2.sh  payToScriptV2AutoSeletUtxo.sh  payToScriptV2AutoSeletUtxoMainnet.sh  unlockAdaFromScript.sh
