cabal-version:      3.0
name:               plutus-paas
version:            1.0.0.0
author:             Thang Tran
description:        Create Plutus scripts for paas smart contracts.
build-type:         Simple

flag unexpected_thunks
  description: Turn on unexpected thunks checks
  default:     False

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common common-definitions
  build-depends:      base ^>=4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost
    OverloadedStrings

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

common maybe-Win32

library
  import:          common-definitions
  hs-source-dirs:  src

  if os(windows)
    build-depends: Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  exposed-modules:
    paasV1.UnlockBypaasWithOutDeadLine
    paasV1.UnlockBypaasWithOutDeadLine
    paasV1.UnlockBypaasWithDeadLine
    paasV1.UnlockByEmpWithDeadLine
    paasV1.UnlockByEmpWithoutDeadLine
    paasV1.SimpleToTest
    paasV2.UnlockBypaasWithOutDeadLine
    paasV2.UnlockBypaasWithDeadLine
    paasV2.UnlockByEmpWithDeadLine
    paasV2.UnlockByEmpWithoutDeadLine

  build-depends:   plutus-script-utils >=1.0.0

  build-depends:
    , cardano-api             >=1.35
    , cardano-cli             >=1.35
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-network
    , plutus-ledger-api       >=1.0.0
    , plutus-tx               >=1.0.0
    , plutus-tx-plugin        >=1.0.0

  
  build-depends:
    , aeson
    , bytestring
    , containers
    , serialise
    , strict-containers
    , text
    , transformers
    , transformers-except

executable plutus-paas
  import:         common-definitions
  hs-source-dirs: app
  main-is:        plutus-paas.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T

  -- Local components
  build-depends:  plutus-paas

  -- IOG dependencies
  build-depends:  cardano-api >=1.35

  -- Non-IOG dependencies
  build-depends:
    , directory
    , filepath

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-tool-depends:
    , cardano-cli:cardano-cli                >=1.35
    , cardano-node:cardano-node              >=1.35
    , cardano-submit-api:cardano-submit-api  >=1.35
